# RieManifold

./: .gitignore  LICENSE  README.md  examples.py  geometry_notebook.ipynb  manifold.py  pyproject.toml  utils.py
notebooks/: geometry_notebook.ipynb
src/riemanifold/: __init__.py  examples.py  manifold.py  utils.py
