[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "riemanifold"
version = "1.1.1"
authors = [
  { name="Robert Wiebe", email="robert.wiebe9@icloud.com" },
]
description = "A package for performing geometric computations on Riemannian manifolds"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.2",
    "torch>=2.3.0",
    "scipy>=1.14.0",
    "numdifftools>=0.9.41",
    "matplotlib>=3.9.2",
]
keywords = ["Riemannian", "Manifold", "Geometry"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = { file = "LICENSE" }

[project.urls]
Homepage = "https://github.com/robert-wbe/RieManifold"
Issues = "https://github.com/robert-wbe/RieManifold/issues"